--- a/public/styles.css
+++ b/public/styles.css
@@ -227,6 +227,11 @@ footer{
 
 }
 
+.pieChart{
+  padding-left: 30%;
+  padding-top: 10%
+}
+
 /***************************Profile********************************************/
 
 .Create-Project{
